--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <main>
             <div class="game-container">
-                <div>
+                <div class="game">
                     <button class="game-intro-screen" id="game-intro-screen" onclick="screen2()">Mudlark<br><br><p class="game-screen-smaller-text">A game about searching for treasure on the banks of the Thames.</p><br><br>Click to continue...</button>
                     <button class="game-story-screen2" id="game-story-screen2" onclick="startGame()">
                         <p>Hi, I'm Jay. I live near the banks of the Thames. There's all kinds of treasure buried in the silt that most folks don't even think to look for. My best friend is getting married today and we always used to come out here mudlarking together.<br>I want to find her some wedding day treasure:<br></p>
